Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11160

Fakevim does not expand ~

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 4.1.0-beta1
    • Qt Creator 2.8.1
    • FakeVim
    • None
    • Linux, Debian Sid.
    • 40a9463c560c21c8117dceed5c4866c7474712bb

    Description

      I have my vimrc configured, but its :source commands don't get executed.

      Also :source ~/.vimrc says "Cannot open file ~/.vimrc"

      Invoking :source /home/mjt/.vim/vimrc says "Cannot open file ~/.vim/config/mjt.vim" which is one of the files I've split my conf into.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hjk hjk
            mjtorn Markus Törnqvist
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes